--- a/Env/prod/adservice/adservice.yaml
+++ b/Env/prod/adservice/adservice.yaml
@@ -28,7 +28,7 @@ spec:
       serviceAccountName: default
       terminationGracePeriodSeconds: 5
       imagePullSecrets:
-      - name: deploy-pull-harbor
+      - name: docker-sec
       containers:
       - name: server
         image: adservice
@@ -36,7 +36,10 @@ spec:
         - containerPort: 9555
         env:
         - name: PORT
-          value: "9555"
+          valueFrom:
+             configMapKeyRef:
+                   name: cm1
+                   key: container_port
         # - name: DISABLE_STATS
         #   value: "1"
         # - name: DISABLE_TRACING
