--- a/Env/prod/adservice/kustomization.yaml
+++ b/Env/prod/adservice/kustomization.yaml
@@ -1,7 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-    - Adservice_manifest/adservice.yml
+    - adservice.yaml
 
 
 patches:
